objects/Registered_Contact__c.object
<CustomObject>
    <fields>
        <fullName>CampaignMember__c</fullName>
        <label>CampaignMember</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Registration_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Registration_Relationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Code__c</fullName>
        <formula>Registration__r.Event__r.Event_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <formula>CASESAFEID(Registration__r.Event__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityContactRole__c</fullName>
        <label>OpportunityContactRole</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Registration_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <formula>Registration__r.Paid_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <formula>Registration__r.Promo_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promo Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reg_Status__c</fullName>
        <formula>Registration__r.Reg_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reg Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Registration</label>
        <referenceTo>Registration__c</referenceTo>
        <relationshipName>Registration_Relationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <description>Verified, Cancelled or Registered Date</description>
        <formula>NULLVALUE( Registration__r.Verified_Date__c ,  NULLVALUE( Registration__r.Cancelled_Date__c ,  Registration__r.Registered_Date__c ) )</formula>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <label>Registered Contact</label>
    <nameField>
        <displayFormat>RL-{0000}</displayFormat>
        <label>Registered Contact</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registered Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>